projects/examples/source/12.11.cpp
//////////////////////////////////////////////////////////////////////////

#include <print>
#include <string>
#include <string_view>
#include <type_traits>

//////////////////////////////////////////////////////////////////////////

using namespace std::literals;

//////////////////////////////////////////////////////////////////////////

void test(std::string_view view) 
{
    std::print("test : view = {}\n", view);
}

//////////////////////////////////////////////////////////////////////////

int main()
{
    auto string = "aaaaa"s; // support : compiler-explorer.com

//  ----------------------------------------------------------------------

    [[maybe_unused]] std::string_view view_1 = string;

//  ----------------------------------------------------------------------

    auto view_2 = "aaaaa"sv;

//  ----------------------------------------------------------------------

    static_assert(std::is_same_v < decltype(view_2), std::string_view > );

//  ----------------------------------------------------------------------

//  string.append("bbbbb"); // error

//  ----------------------------------------------------------------------
    
    test(string);
}

//////////////////////////////////////////////////////////////////////////